--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "ruff>=0.1.8",
     "mypy>=1.7.1",
     "types-python-dateutil>=2.8.19",
+    "testcontainers[postgres]>=3.7.0",
 ]
 
 [build-system]
