feat: add persona mapper system with CLI interface
- Implement PersonaMapper base class for transforming mindscapes into personas
- Create DailyWorkOptimizer mapper that generates time-aware work suggestions
- Add persona API endpoints for generation and retrieval
- Implement CLI command `persona-kit suggest` for formatted suggestions
- Support context-aware suggestions based on energy patterns and time of day
- Add TTL management for personas (default 24 hours)
- Include Rich-formatted output with emoji indicators for energy/task types

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ dependencies = [
     "httpx>=0.25.2",
     "python-multipart>=0.0.6",
     "greenlet>=3.0.0",
+    "rich>=13.7.0",
 ]
+
+[project.scripts]
+persona-kit = "src.cli.main:main"
 
 [project.optional-dependencies]
 dev = [
